Copia de nivelA en nivelB, MakeFile adaptado

--- a/Entrega 2/Makefile
+++ b/Entrega 2/Makefile
@@ -3,10 +3,10 @@ CC=gcc
 CFLAGS=-c -g -Wall -std=c99
 #LDFLAGS=-lreadline -Incurses #activar si se usa readline
  
-SOURCES=nivelA.c
+SOURCES=nivelA.c nivelB.c 
 LIBRARIES= #.o
 INCLUDES= #.h
-PROGRAMS=nivelA
+PROGRAMS=nivelA nivelB
 OBJS=$(SOURCES:.c=.o)
  
 all: $(OBJS) $(PROGRAMS)
@@ -16,7 +16,10 @@ all: $(OBJS) $(PROGRAMS)
  
 nivelA: nivelA.o
 	$(CC) $@.o -o $@ $(LIBRARIES)
- 
+
+nivelB: nivelB.o
+	$(CC) $@.o -o $@ $(LIBRARIES)
+
 %.o: %.c $(INCLUDES)
 	$(CC) $(CFLAGS) -o $@ -c $<
  
