--- a/Entrega 2/Makefile
+++ b/Entrega 2/Makefile
@@ -3,10 +3,10 @@ CC=gcc
 CFLAGS=-c -g -Wall -std=c99
 #LDFLAGS=-lreadline -Incurses #activar si se usa readline
  
-SOURCES=nivelA.c nivelB.c
+SOURCES=nivelA.c nivelB.c nivelC.c
 LIBRARIES= #.o
 INCLUDES= #.h
-PROGRAMS=nivelA nivelB
+PROGRAMS=nivelA nivelB nivelC
 OBJS=$(SOURCES:.c=.o)
  
 all: $(OBJS) $(PROGRAMS)
@@ -18,6 +18,9 @@ nivelA: nivelA.o
 	$(CC) $@.o -o $@ $(LIBRARIES)
 
 nivelB: nivelB.o
+	$(CC) $@.o -o $@ $(LIBRARIES)
+
+nivelC: nivelC.o
 	$(CC) $@.o -o $@ $(LIBRARIES)
  
 %.o: %.c $(INCLUDES)
